migrations ,refatoração de entidades,useCases
